--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -9,7 +9,6 @@
 		<title>Liam Johnson's Portfolio</title>
 		<link href="styles/main.css" rel="stylesheet" type="text/css" />
 		<style>
-			}
 			caption {
 				font-weight: bold;
 				font-size: 1.2em;
@@ -42,7 +41,7 @@
 				float:left;
 			}
 			article {
-				margin-bottom: 16px;
+				margin: 0px 4px 16px 4px;
 			}
 		</style>
 	</head>
