--- a/restaurant/contact.html
+++ b/restaurant/contact.html
@@ -5,68 +5,152 @@
 	Most Recent Revision:
 -->
 <html lang="en">
-	<main>
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+	<link href="styles/restaurantStyles.css" rel="stylesheet" type="text/css" />
+	<script src='https://kit.fontawesome.com/a076d05399.js'></script>
+	<script type="text/JavaScript" src="restaurant.js"></script>
 		<head>
 			<title>Contact Us</title>
+			<style>
+				<!-- form {
+					width: 30em;
+					margin: auto;
+				}
+				.form1 label, .fsLabel {
+					width: 15em;
+					float: left;
+					text-align: right;
+					padding-right: 0.5em;
+				}
+				fieldset {
+					padding: 0;
+					border: 0;
+					width: 14em;
+					text-align: left;
+				}
+				input, textarea {
+					text-align: left;
+				}
+				div.fsInputs {
+					text-align: left;
+				}
+				input#submit {
+					display: block;
+					margin: auto;
+					margin-top: 6px;
+				}
+				.form1 input, select, textarea {
+					width: 15em;
+				}
+				.form1 label, .form1 input, select, textarea {
+					margin: 3px auto;
+				} -->
+				.has-error {
+					border: 2px dotted red;
+				}
+				.required {
+					font-weight: bold;
+				}
+			</style>
 		</head>
-		
+	<main>
 		<body>
 			<header>
-				<h1>Boat Brothers</h1>
+				<h1 style="padding-top: 20px;">Boat Brothers</h1>
 				<hr />
+				<h5 style="text-align: right; margin-right: 4px;">This page requires JavaScript enabled in order to work properly</h5>
 			</header>
 			
-			<nav>
-			<p><a href="index.html">Home</a></p>
-			<p><a href="menu.html">Menu</a></p>
-			<p><a href="contact.html">Contact Us</a></p>
-			<hr />
-			</nav>
+			<ul class="nav nav-tabs">
+			  <li class="nav-item">
+				<a class="nav-link fas" href="index.html">&#xf015;</a>
+			  </li>
+			  <li class="nav-item">
+				<a class="nav-link" href="menu.html">Menu</a>
+			  </li>
+			  <li class="nav-item">
+				<a class="nav-link active" aria-current="page" href="contact.html">Contact Me</a>
+			  </li>
+			</ul>
 			
-			<form action="submit.html" method="POST">
-				<label for="name">Name: </label>
-				<input type="text" id="name" name="name"><br />
-				<label for="email">Email: </label>
-				<input type="text" id="email" name="email"><br />
-				<label for="phone">Phone: </label>
-				<input type="text" id="phone" name="phone"><br />
-				<label for="reason">Reason for Inquiry: </label>
-				<select id="reason" name="reason">
-					<option value="default" selected>Catering</option>
-					<option value="party">Private Party</option>
-					<option value="feedback">Feedback</option>
-					<option value="other">Other</option>
-				</select><br />
-				<label for="info">Additional Information: </label>
-				<textarea id="info" name="info"></textarea><br />
-				<fieldset>
-					<legend>Have you been to the restaurant?</legend>
-					<input type="radio" id="choice1" name="visit" value="no">
-					<label for="choice1">No</label>
-					<input type="radio" id="choice2" name="visit" value="yes">
-					<label for="choice2">Yes</label>
-				</fieldset><br />
-				<fieldset>
-					<legend>Best days to contact you: </legend>
-					<input type="checkbox" id="mon" name="contact" value="mon">
-					<label for="mon">M</label>
-					<input type="checkbox" id="tue" name="contact" value="tue">
-					<label for="tue">T</label>
-					<input type="checkbox" id="wed" name="contact" value="wed">
-					<label for="wed">W</label>
-					<input type="checkbox" id="thu" name="contact" value="thu">
-					<label for="thu">Th</label>
-					<input type="checkbox" id="fri" name="contact" value="fri">
-					<label for="fri">F</label>
-				</fieldset>
-				<input type="submit" id="submit" value="Submit">
+			<div class="row">
+				<p style="color: red; text-align: center;">Items in <span class="required">bold</span> are required.<p>
+			</div>
+			
+			<form class="form" onsubmit="return validateItems()" id="contactForm">
+				<div class="form-group row mb-3">
+					<label class="form-label col-form-label col-sm-4 col-med-4 col-lg-4 required" for="name">Name: </label>
+					<input class="form-control col-sm col-med col-lg" type="text" id="name" name="name">
+				</div>
+				<div class="form-group row mb-3">
+					<label class="form-label col-form-label col-sm-4 col-med-4 col-lg-4 required" for="email">Email: </label>
+					<input class="form-control col-sm col-med col-lg" type="text" id="email" name="email">
+				</div>
+				<div class="form-group row mb-3">
+					<label class="form-label col-form-label col-sm-4 col-med-4 col-lg-4 required" for="phone">Phone: </label>
+					<input class="form-control col-sm col-med col-lg" type="text" id="phone" name="phone">
+				</div>
+				<div class="row mb-3">
+					<label class="form-label col-form-label col-sm-4 col-med-4 col-lg-4" for="reason">Reason for Inquiry: </label>
+					<select class="form-select col-sm col-med col-lg" id="reason" name="reason">
+						<option value="default" selected>Catering</option>
+						<option value="party">Private Party</option>
+						<option value="feedback">Feedback</option>
+						<option value="other">Other</option>
+					</select>
+				</div>
+				<div class="row">
+					<label class="form-label col-form-label col-sm-4 col-med-4 col-lg-4" for="info">Additional Info: </label>
+					<textarea style="width: 66%;" class="form-control col-sm-8 col-med-8 col-lg-8" id="info" name="info"></textarea>
+				</div>
+				<div class="row">
+					<fieldset>
+						<legend class="form-label col-form-label col-sm-4 col-med-4 col-lg-4">Have you been to the restaurant?</legend>
+						<div class="fsInputs form-check form-check-inline col-sm col-med col-lg">	
+							<input class="form-check-input" type="radio" id="choice1" name="visit" value="no" checked>
+							<label class="form-check-label" for="choice1">No</label>
+						</div>
+						<div class="fsInputs form-check form-check-inline col-sm col-med col-lg">
+							<input class="form-check-input" type="radio" id="choice2" name="visit" value="yes">
+							<label class="form-check-label" for="choice2">Yes</label>
+						</div>
+					</fieldset>
+				</div>
+				<div class="row">
+					<fieldset>
+						<legend class="form-label col-form-label col-sm-4 col-med-4 col-lg-4">Best days to contact you:</legend>
+						<div class="fsInputs form-check form-check-inline col-sm col-med col-lg">
+							<input class="form-check-input" type="checkbox" id="mon" name="contact" value="mon">
+							<label class="form-check-label" for="mon">M</label>
+						</div>
+						<div class="form-check form-check-inline col-sm col-med col-lg">
+							<input class="form-check-input" type="checkbox" id="tue" name="contact" value="tue">
+							<label class="form-check-label"for="tue">T</label>
+						</div>
+						<div class="form-check form-check-inline col-sm col-med col-lg">
+							<input class="form-check-input" type="checkbox" id="wed" name="contact" value="wed">
+							<label class="form-check-label" for="wed">W</label>
+						</div>
+						<div class="form-check form-check-inline col-sm col-med col-lg">
+							<input class="form-check-input" type="checkbox" id="thu" name="contact" value="thu">
+							<label class="form-check-label" for="thu">Th</label>
+						</div>
+						<div class="form-check form-check-inline col-sm col-med col-lg">
+							<input class="form-check-input" type="checkbox" id="fri" name="contact" value="fri">
+							<label class="form-check-label"for="fri">F</label>
+						</div>
+					</fieldset>
+				</div>
+				<button type="submit" id="submitButton" class="btn btn-secondary">Submit</button>
 			</form>
+			
 			
 			<footer>
 			<hr />
 			<p>2542 64nd Avenue, Karrdowan, NK 46660</p>
 			<p>555-263-9394</p>
 			</footer>
+			<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
 		</body>
 	<main>
 </html>
