--- a/restaurant/index.html
+++ b/restaurant/index.html
@@ -5,28 +5,79 @@
 	Most Recent Revision:
 -->
 <html lang="en">
-	<main>
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+	<link href="styles/restaurantStyles.css" rel="stylesheet" type="text/css" />
+	<script src='https://kit.fontawesome.com/a076d05399.js'></script>
 		<head>
 			<title>Home Page</title>
+			<style>
+				.carousel-item img {
+					min-height: 350px;
+					min-width: 225px;
+					max-height: 700px;
+					max-width: 450px;
+					width: auto;
+					height: auto;
+				}
+				.carousel {
+					width: auto;
+					height: auto;
+				}
+			</style>
 		</head>
-		
-		<body>
+	<main style="display:block;">	
+		<body style="width:100%;">
 			<header>
-				<h1>Boat Brothers</h1>
+				<h1 style="padding-top: 20px;">Boat Brothers</h1>
 				<hr />
+				<h5 style="text-align: right; margin-right: 4px;">This page requires JavaScript enabled in order to work properly</h5>
 			</header>
 			
-			<nav>
-			<p><a href="index.html">Home</a></p>
-			<p><a href="menu.html">Menu</a></p>
-			<p><a href="contact.html">Contact Us</a></p>
-			<hr />
-			</nav>
+			<ul class="nav nav-tabs">
+			  <li class="nav-item">
+				<a class="nav-link active fas" aria-current="page" href="index.html">&#xf015;</a>
+			  </li>
+			  <li class="nav-item">
+				<a class="nav-link" href="menu.html">Menu</a>
+			  </li>
+			  <li class="nav-item">
+				<a class="nav-link" href="contact.html">Contact Me</a>
+			  </li>
+			</ul>
 			
-			<div id="desc">
-			<img src="images/image.jpg" alt="Our beautiful dining room" width="400"><!-- source https://www.pexels.com/photo/table-in-vintage-restaurant-6267 -->
-			<h4>Restaurant Description</h4>
-			<p>Boat Brothers, known locally as Boat Bros, is a simple family-style restaurant. Our goal is to serve the proud citizens of Karrdowan and provide a "home away from home" for all those buy nights where cooking at home is too tedious. Or perhaps you're on a date night with that new girl you met. Regardless, our goal is to serve, and service is our specialty.</p>
+			<div class="container">
+				<div class="row">
+					<h2 class="display-2 col-sm" style="text-align: center;">NEW LOCATION IN BRICKFIELD!</h2>
+				<div>
+				<div class="row">
+					<div id="carouselMain" class="carousel slide carousel-fade carousel-dark col-sm" data-bs-ride="carousel" style="max-width: 450px;">
+						<div class="carousel-inner" data-bs-interval="10000">
+							<div class="carousel-item active">
+								<img src="images/carouselNewLocation.png" class="d-block w-100" alt="We have a new location opening in Brickfield!" />
+							</div>
+							<div class="carousel-item" data-bs-interval="10000">
+								<img src="images/carouselSeasonalMenu.png" class="d-block w-100" alt="We're starting a new Seasonal Menu!" />
+							</div>
+							<div class="carousel-item" data-bs-interval="10000">
+								<img src="images/carouselDotM.png" class="d-block w-100" alt="Our drink of the month is the SG Special Brew!" />
+							</div>
+						</div>
+						<a class="carousel-control-prev" href="#carouselMain" role="button" data-bs-slide="prev">
+							<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+							<span class="visually-hidden">Previous</span>
+						</a>
+						<a class="carousel-control-next" href="#carouselMain" role="button" data-bs-slide="next">
+							<span class="carousel-control-next-icon" aria-hidden="true"></span>
+							<span class="visually-hidden">Next</span>
+						</a>
+					</div>
+					
+					<div class="col-sm">
+						<img src="images/image.jpg" alt="Our beautiful dining room" style="max-width: 500px;">
+						<!-- img source https://www.pexels.com/photo/table-in-vintage-restaurant-6267 -->
+						<p style="margin-bottom: 25%;">Boat Brothers, known locally as Boat Bros, is a simple family-style restaurant. Our goal is to serve the proud citizens of Karrdowan and provide a "home away from home" for all those buy nights where cooking at home is too tedious. Or perhaps you're on a date night with that new girl you met. Regardless, our goal is to serve, and service is our specialty.</p>
+					</div>
+				</div>
 			</div>
 			
 			<footer>
@@ -34,6 +85,7 @@
 			<p>2542 64nd Avenue, Karrdowan, NK 46660</p>
 			<p>555-263-9394</p>
 			</footer>
+			<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
 		</body>
 	</main>
 </html>
